@@ -76,6 +76,7 @@ block and wake up all workers.
 
 \fn int starpu_sched_set_min_priority(int min_prio)
 \ingroup API_Scheduling_Policy
+TODO: check if this is correct
 Defines the minimum task priority level supported by the scheduling
 policy. The default minimum priority level is the same as the default
 priority level which is 0 by convention. The application may access
@@ -86,6 +87,7 @@ application.
 
 \fn int starpu_sched_set_max_priority(int max_prio)
 \ingroup API_Scheduling_Policy
+TODO: check if this is correct
 Defines the maximum priority level supported by the scheduling policy.
 The default maximum priority level is 1. The application may access
 that value by calling the function starpu_sched_get_max_priority().
@@ -95,11 +97,13 @@ application.
 
 \fn int starpu_sched_get_min_priority(void)
 \ingroup API_Scheduling_Policy
+TODO: check if this is correct
 Returns the current minimum priority level supported by the scheduling
 policy
 
 \fn int starpu_sched_get_max_priority(void)
 \ingroup API_Scheduling_Policy
+TODO: check if this is correct
 Returns the current maximum priority level supported by the scheduling
 policy
 
